lib/src/compiler/tests/testdata/errors/145.out
error[E014]: invalid regular expression
 --> line:3:5
  |
3 |     $a = /|||||||||||||||||||||||||||||||||||...||||||||||||||||||||||||||||||||||||||||||||||||/
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ too many alternatives in alternation (max: 255)